--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,9 @@
   <mat-sidenav-content>
     <app-header (sideNavigationToggle)="sidenav.toggle()"></app-header>
     <app-navtabs></app-navtabs>
+    <main>
+      <router-outlet></router-outlet>
+    </main>
   </mat-sidenav-content>
-  <router-outlet></router-outlet>
 </mat-sidenav-container>
 
