--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <div class="book-now-container">
+    <div fxFlex fxLayoutAlign="flex-end">
+      <button class="book-now-button" mat-stroked-button color="primary">
+        Book Now
+      </button>
+    </div>
+  </div>
+  <div class="header-container" fxLayout="row" fxLayout="column" fxLayoutAlign="center center">
+    <div>
+      <h3 class="mat-subheading-2">Luxury Beach Front Resort</h3>
+    </div>
+    <div>
+        <h1 class="mat-headline">Natai Beach Resort & Spa</h1>
+      </div>
+  </div>
+</div>
