--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -6,7 +6,7 @@
    </div>
    <div class="logo-container">
      <div fxLayout="column" fxLayoutAlign="center center">
-        <img class="logo" src="assets/images/logo5.png" alt="company logo">
+        <img class="logo" src="assets/images/logo.png" alt="company logo">
      </div>
    </div>
 </mat-toolbar>
