--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,4 +1,4 @@
-<mat-nav-list>
+<mat-nav-list class="nav-list-container">
   <a mat-list-item routerLink="/signin" (click)="onToggleClose()">
     <mat-icon>input</mat-icon>
     <span>Signin</span>
