--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,4 +14,7 @@
         <h1 class="mat-headline">Natai Beach Resort & Spa</h1>
       </div>
   </div>
+  <div class="thailand">
+     <h3>Thailand</h3>
+  </div>
 </div>
